apollo-router/src/plugins/cache/snapshots/uhg_custom_appollo_roouter__plugins__cache__tests__no_data-2.snap
---
source: apollo-router/src/plugins/cache/tests.rs
assertion_line: 920
expression: response
---
{
  "data": {
    "currentUser": {
      "allOrganizations": [
        {
          "id": "1",
          "name": "Organization 1"
        },
        {
          "id": "3",
          "name": "Organization 3"
        }
      ]
    }
  }
}
