apollo-router/src/plugins/cache/snapshots/uhg_custom_appollo_roouter__plugins__cache__tests__private-3.snap
---
source: apollo-router/src/plugins/cache/tests.rs
assertion_line: 782
expression: cache_keys
---
[
  {
    "key": "version:1.0:subgraph:orga:type:Organization:entity:bcc0a4a9f8c595510c0ff8849bc36b402ac3f52506392d67107c623528ff11f4:representation::hash:4db0b6e27a228df592ab8ae4e6c776bb048cb4d82d191a9eb49c182705781e78:data:d9d84a3c7ffc27b0190a671212f3740e5b8478e84e23825830e97822e25cf05c:03ac674216f3e15c761ee1a5e255f067953623c8b388b4459e13f978d7c846f4",
    "status": "cached",
    "cache_control": "private"
  },
  {
    "key": "version:1.0:subgraph:user:type:Query:hash:3e689b15c9cee1f2812c319a66ddbe8bfc452c8ab6759566ed1987cae95178cd:data:d9d84a3c7ffc27b0190a671212f3740e5b8478e84e23825830e97822e25cf05c:03ac674216f3e15c761ee1a5e255f067953623c8b388b4459e13f978d7c846f4",
    "status": "cached",
    "cache_control": "private"
  }
]
