apollo-router/src/plugins/cache/snapshots/uhg_custom_appollo_roouter__plugins__cache__tests__private-4.snap
---
source: apollo-router/src/plugins/cache/tests.rs
assertion_line: 786
expression: response
---
{
  "data": {
    "currentUser": {
      "activeOrganization": {
        "id": "1",
        "creatorUser": {
          "__typename": "User",
          "id": 2
        }
      }
    }
  }
}
